# Ranipokhari

./: Algrothims.h  CMakeLists.txt  Camera.h  Math.h  Mesh.cpp  Mesh.h  Model.h  README.md  RaniPok.h  RaniPokhari.h  bars_only.mtl  begin1.mtl  begin_____.mtl  boats_2.mtl  ghantaghar.mtl  ghantaghar2.mtl  glad.c  hour_hand.mtl  inputHandle.h  main.cpp  main_temple.mtl  matrix.h  minute_hand.mtl  shader_m.h  shader_s.h  skybox.h  sunShader.vert  sun_only.mtl  tree.mtl  vec.h  water.mtl
Assets/Shaders/: light.vert  reflection.frag  reflection.vert  shader.frag  skybox.frag  sunShader.frag  sunShader.vert  vehicleShader.frag  vehicleShader.vert  water.frag  wireShader.frag  wireShader.vert
Assets/Shaders/Assets/Shaders/: light.frag  sunlight.vert  water.vert
Shaders/: light.vert  shader.vert
rani/: Cybertruck.mtl  boats.mtl  boats_1.mtl  boats_3.mtl  brick_texture1.tiff  ghantaghar.mtl  lights_and_bars_without_sun.mtl  main_temple.mtl  plants1.mtl  road_and_ground.mtl  sivalinga.mtl  stairs.mtl  tree.mtl  trees.mtl  walls.mtl  wires.mtl
